# Traffic-SImulation-and-Visualization

./: .gitignore  .qmake.stash  CMakeLists.txt  FTS.md  IntersectionRoadSimulationandVisualization.pro  IntersectionRoadSimulationandVisualization.pro.user.8edd1f6  IntersectionRoadSimulationandVisualization.pro.user.9e1d943  IntersectionRoadSimulationandVisualization.pro.user.a96ce3a  README.md  UiQml.qml  UiQmlForm.ui.qml  commonenum.h  compile.sh  datawidget.cpp  datawidget.h  datawidget.ui  generator.cpp  generator.h  graphicsview.cpp  graphicsview.h  launch.sh  lightwidget.cpp  lightwidget.h  lightwidgetleft.cpp  lightwidgetleft.h  main.cpp  mainwindow.cpp  mainwindow.cpp.I74560  mainwindow.h  mainwindow.ui  pedestrian.cpp  pedestrian.h  resource.qrc  road.cpp  road.h  road_ui.cpp  road_ui.h  simulationcontrol.cpp  simulationcontrol.cpp.autosave  simulationcontrol.h  (+29 more)
.github/workflows/: AssembleRelease.yml  QMakeMatrix.yml  ReleaseWindows.yml  Windows_x86_64bit.yml  cmake.yml  copilot-instructions.md
Entities/: trafficcontroller.cpp  trafficcontroller.h  trafficdetector.cpp  trafficdetector.h
Entities/TrafficLight/: lightwidget.cpp  lightwidget.h  lightwidgetleft.cpp  trafficlight.cpp  trafficlight.h
Entities/Vehicle/: vehicle.cpp  vehicle.h  vehiclesight.cpp
TestTraffic/: Traffic.pro  Traffic.pro.user.a96ce3a  graphicsview.cpp  graphicsview.h  lightwidget.cpp  lightwidget.h  lightwidgetleft.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  road.h  trafficcontroller.cpp  trafficcontroller.h  trafficdetector.cpp  trafficdetector.h  trafficlight.cpp  trafficlight.h  vehicle.cpp
UI/: aboutwidget.cpp  aboutwidget.h  aboutwidget.ui  graphicsview.cpp  graphicsview.h  helpwidget.cpp  helpwidget.h  helpwidget.ui  intropage.cpp  intropage.h  intropage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  metricswidget.cpp  metricswidget.h  metricswidget.ui  metricswidget_old.cpp  simulationcontrolwidget.cpp  simulationcontrolwidget.h  simulationcontrolwidget.ui  simulationscene.cpp  simulationscene.cpp.autosave  simulationscene.h  simulationsetup.cpp  simulationsetup.h  simulationsetup.ui  uimainwindow.cpp  uimainwindow.h  uimainwindow.ui  visualizepanel.cpp  visualizepanel.cpp.autosave  visualizepanel.h  visualizepanel.ui
Utilities/: SpatialGrid.cpp  SpatialGrid.h  generator.cpp  generator.h  performancemetrics.cpp  performancemetrics.h  qlightboxwidget.cpp  qlightboxwidget.h  road.h  roadintersectionsimulation.cpp  roadintersectionsimulation.h  simulationcontrol.cpp  simulationcontrol.h  simulationcontrol.ui  spatialgrid.cpp  spatialgrid.h  vehiclesgenerator.cpp  vehiclesgenerator.h
docs/: PERFORMANCE_METRICS_SYSTEM.md  SIMULATION_CONTROL_FIXES.md  SPATIAL_GRID_OPTIMIZATION.md
